changed align on exp section

--- a/index.html
+++ b/index.html
@@ -144,29 +144,19 @@
       <section class="about" id="about">
         <div class="container">
           <div class="profile-img" data-aos="fade-up" data-aos-delay="300">
-            <img src="images/profile2.jpg" alt="" />
+            <img class="profileimage" src="images/profile2.jpg" alt="" />
           </div>
           <div class="about-details" data-aos="fade-down" data-aos-delay="600">
-            <div class="about-heading">
-              <h1>About Me</h1>
-            </div>
             <br />
             <p class="paragraph-section about">
-              Hello, I'm a full-stack web developer. I create products that are truly unique and reflect their value and aesthetics.
+              I'm a full-stack web developer. I create products that are truly unique and reflect their value and aesthetics.
               <br />
               <br />
-              I have a bachelor's degree in Biochemistry, with a specialized
-              background in allergy and medical devices. I finished my
-              master's in Biomedical Engineering and specialized in Carbon
-              MEMS/NEMS (Micro- or Nano- Electro-Mechanical Systems), microfabrication, and
-              electrochemical devices.
+              I have a bachelor's degree in Biochemistry and Cell Biology. I finished my master's in Biomedical Engineering and specialized in Carbon MEMS/NEMS, nanofibers, and electrochemical devices.
               <br />
               <br />
-              Shortly after I finished my Master's, I dabbled in programming
-              as a hobby to build fun applications.
-              Then, this hobby led me into the field of web development where I
-              found myself enjoying building interactive tools and intuitive
-              web-based products.
+              Shortly after I finished my graduate program, I dabbled in programming
+              as a hobby to build a fun interactive game. Then, the hobby led me into the field of web development where I found myself enjoying building interactive tools and intuitive web-based products.
             </p>
           </div>
         </div>
@@ -177,73 +167,74 @@
             <h1>Work Experience</h1>
             <h6>See where I worked </h6>
           </div>
-        </div>
-        <div class="work-exp-content">
-          <div class="container experience-content" data-aos="fade-down" data-aos-delay="300">
-            <div class="tab">
-              <button class="tablinks" onclick="openCity(event, 'cj')" id="defaultOpen">
-                [Current Job]
-              </button>
-              <button class="tablinks" onclick="openCity(event, 'biomems')">
-                BioMEMS/Carbon-MEMS
-              </button>
-              <button class="tablinks" onclick="openCity(event, 'thermo')">
-                Thermoplastic Shrink Lab
-              </button>
-              <button class="tablinks" onclick="openCity(event, 'hycor')">
-                Hycor Biomedical
-              </button>
-              <button class="tablinks" onclick="openCity(event, 'rdl')">
-                RDL Reference Lab
-              </button>
-              <button class="tablinks" onclick="openCity(event, 'VA Hospital')">
-                VA San Diego Healthcare
-              </button>
-            </div>
-            <div>
-              <div id="cj" class="tabcontent">
-                <h1>Curren Job</h1>
-                <h3>Full-Stack Web Developer</h3>
-                <br>
-                <p> Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industryorem Ipsum is simply dummy text of the
-                  printing and typesetting industryLondon is the capital city of England.</p>
+          <div class="work-exp-content">
+            <div class="container" data-aos="fade-down" data-aos-delay="300">
+              <div class="tab">
+                <button class="tablinks" onclick="openCity(event, 'cj')" id="defaultOpen">
+                  [Current Job]
+                </button>
+                <button class="tablinks" onclick="openCity(event, 'biomems')">
+                  BioMEMS/Carbon-MEMS
+                </button>
+                <button class="tablinks" onclick="openCity(event, 'thermo')">
+                  Thermoplastic Shrink Lab
+                </button>
+                <button class="tablinks" onclick="openCity(event, 'hycor')">
+                  Hycor Biomedical
+                </button>
+                <button class="tablinks" onclick="openCity(event, 'rdl')">
+                  RDL Reference Lab
+                </button>
+                <button class="tablinks" onclick="openCity(event, 'VA Hospital')">
+                  VA San Diego Healthcare
+                </button>
               </div>
-              <div id="biomems" class="tabcontent">
-                <h1>UC Irvine BioMEMS/Carbon-MEMS Laboratory</h1>
-                <h3>Graduate Researcher</h3>
-                <br>
-                <p>Paris is the capital of France. Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industryorem Ipsum is simply dummy text of the
-                  printing and typesetting industry</p>
-              </div>
-              <div id="thermo" class="tabcontent">
-                <h1>Thermoplastic Shrink Laboratory</h1>
-                <h3>Rotational Graduate Research Student</h3>
-                <br>
-                <p>Tokyo is the capital of Japan.</p>
-              </div>
-              <div id="hycor" class="tabcontent">
-                <h1>Hycor Biomedical, Inc.</h1>
-                <h3>R&D Research Associate (Biochemistry/Instrument Integration)</h3>
-                <br>
-                <p>Tokyo is the capital of Japan.</p>
-              </div>
-              <div id="rdl" class="tabcontent">
-                <h1>Rheumatology Diagnostics (Reference) Laboratory (RDL)</h1>
-                <h3>Research Analyst</h3>
-                <br>
-                <p>Tokyo is the capital of Japan.</p>
-              </div>
-              <div id="VA Hospital" class="tabcontent">
-                <h1>VA San Diego Healthcare System</h1>
-                <h3>Undergraduate Research Assistant</h3>
-                <br>
-                <p>Tokyo is the cwefwefwfwefweapital of Japan.</p>
+              <div>
+                <div id="cj" class="tabcontent">
+                  <h1>Curren Job</h1>
+                  <h3>Full-Stack Web Developer</h3>
+                  <br>
+                  <p> Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industryorem Ipsum is simply dummy text of the
+                    printing and typesetting industryLondon is the capital city of England.</p>
+                </div>
+                <div id="biomems" class="tabcontent">
+                  <h1>UC Irvine BioMEMS/Carbon-MEMS Laboratory</h1>
+                  <h3>Graduate Researcher</h3>
+                  <br>
+                  <p>Paris is the capital of France. Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industryorem Ipsum is simply dummy text of the
+                    printing and typesetting industry</p>
+                </div>
+                <div id="thermo" class="tabcontent">
+                  <h1>Thermoplastic Shrink Laboratory</h1>
+                  <h3>Rotational Graduate Research Student</h3>
+                  <br>
+                  <p>Tokyo is the capital of Japan.</p>
+                </div>
+                <div id="hycor" class="tabcontent">
+                  <h1>Hycor Biomedical, Inc.</h1>
+                  <h3>R&D Research Associate (Biochemistry/Instrument Integration)</h3>
+                  <br>
+                  <p>Tokyo is the capital of Japan.</p>
+                </div>
+                <div id="rdl" class="tabcontent">
+                  <h1>Rheumatology Diagnostics (Reference) Laboratory (RDL)</h1>
+                  <h3>Research Analyst</h3>
+                  <br>
+                  <p>Tokyo is the capital of Japan.</p>
+                </div>
+                <div id="VA Hospital" class="tabcontent">
+                  <h1>VA San Diego Healthcare System</h1>
+                  <h3>Undergraduate Research Assistant</h3>
+                  <br>
+                  <p>Tokyo is the cwefwefwfwefweapital of Japan.</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        
       </section>
       <section class="portfolio" id="portfolio">
         <div class="container">
