--- a/index.html
+++ b/index.html
@@ -59,36 +59,35 @@
       <div class=" dimension">
         <span class="text font">"Live above your expectation, beyond your imagination."</span>
       </div>
-
       <div id="wrapper">
         <div class="viewport">
           <div class="cube">
             <div class="side">
-              <div class="cube-image"><a href="#photo">4</a></div>
+              <div class="cube-image"><a href="#photo">4.photo</a></div>
             </div>
             <div class="side">
               <div class="cube-image">
-                <a href="#experience">2</a>
+                <a href="#experience">2. experience</a>
               </div>
             </div>
             <div class="side">
               <div class="cube-image">
-                <a href="#contact">6</a>
+                <a href="#contact">6. contact</a>
               </div>
             </div>
             <div class="side">
               <div class="cube-image">
-                <a href="#publications">5</a>
+                <a href="#publications">5.publications</a>
               </div>
             </div>
             <div class="side">
               <div class="cube-image">
-                <a href="#about">1</a>
+                <a href="#about">1. about</a>
               </div>
             </div>
             <div class="side">
               <div class="cube-image active">
-                <a href="#portfolio">3</a>
+                <a href="#portfolio">3.work</a>
               </div>
             </div>
           </div>
@@ -219,7 +218,7 @@
                   <p>Tokyo is the capital of Japan.</p>
                 </div>
                 <div id="rdl" class="tabcontent">
-                  <h1>Rheumatology Diagnostics (Reference) Laboratory (RDL)</h1>
+                  <h1>Rheumatology Diagnostics Laboratory (RDL)</h1>
                   <h3>Research Analyst</h3>
                   <br>
                   <p>Tokyo is the capital of Japan.</p>
