emphasis on intro

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="viewport">
           <div class="cube">
             <div class="side">
-              <div class="cube-image"><a href="#photo">4.photo</a></div>
+              <div class="cube-image"><a href="https://www.instagram.com/elsiemade">4.photo</a></div>
             </div>
             <div class="side">
               <div class="cube-image">
@@ -77,7 +77,7 @@
             </div>
             <div class="side">
               <div class="cube-image">
-                <a href="#publications">5.publications</a>
+                <a href="https://scholar.google.com/citations?hl=en&user=w1WUX4MAAAAJ&sortby=pubdate&view_op=list_works&authuser=1&gmla=AJsN-F5rtis6A5-bqx1JHHbCjIAJZ8m-LIO9zHQcI0qt_raoOrGzVjXKFt8c5Fe-AfG_dI1Ca1lTmOvvumZo4cHN6hZ8GML3YX9FHjXKHKrzeUH1mvsVEKw">5.publications</a>
               </div>
             </div>
             <div class="side">
@@ -148,14 +148,14 @@
           <div class="about-details" data-aos="fade-down" data-aos-delay="600">
             <br />
             <p class="paragraph-section about">
-              I'm a full-stack web developer. I create products that are truly unique and reflect their value and aesthetics.
+              I'm a <a class=emphasis_intro>full-stack web developer</a>. I like creating products that are truly unique and reflect their value and aesthetics.
               <br />
               <br />
-              I have a bachelor's degree in Biochemistry and Cell Biology. I finished my master's in Biomedical Engineering and specialized in Carbon MEMS/NEMS, nanofibers, and electrochemical devices.
+              I have a bachelor's degree in <a class="emphasis_intro">Biochemistry and Cell Biology</a> at University of California, San Diego. I finished my master's in <a class=emphasis_intro>Biomedical Engineering</a> at University of California, Irvine and specialized in <a class=emphasis_intro>Carbon MEMS/NEMS and nanofibers for biosensors and electrochemical devices</a>.
               <br />
               <br />
               Shortly after I finished my graduate program, I dabbled in programming
-              as a hobby to build a fun interactive game. Then, the hobby led me into the field of web development where I found myself enjoying building interactive tools and intuitive web-based products.
+              as a hobby to build a fun game. Then, the hobby led me into the field of <a class=emphasis_intro>web development</a> where I found myself enjoying building interactive and intuitive websites and applications.
             </p>
           </div>
         </div>
