updated exp description

--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
                 <button class="tablinks" onclick="openCity(event, 'thermo')">
                   Thermoplastic Shrink Lab
                 </button>
-                <button class="tablinks" onclick="openCity(event, 'hycor')">
-                  Hycor Biomedical
-                </button>
                 <button class="tablinks" onclick="openCity(event, 'rdl')">
                   RDL Reference Lab
+                </button>
+                <button class="tablinks" onclick="openCity(event, 'hycor')">
+                  Hycor Biomedical
                 </button>
                 <button class="tablinks" onclick="openCity(event, 'VA Hospital')">
                   VA San Diego Healthcare
@@ -198,36 +198,57 @@
                     printing and typesetting industryLondon is the capital city of England.</p>
                 </div>
                 <div id="biomems" class="tabcontent">
-                  <h1>UC Irvine BioMEMS/Carbon-MEMS Laboratory</h1>
-                  <h3>Graduate Researcher</h3>
+                  <h1>UC Irvine BioMEMS/Carbon-MEMS Lab</h1>
+                  <h2>Graduate Researcher, Project Co-Lead</h2>
+                  <h3>Jun 2017 - Oct 2018</h3>
                   <br>
-                  <p>Paris is the capital of France. Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industryorem Ipsum is simply dummy text of the
-                    printing and typesetting industry</p>
+                  <ul>
+                    <li>Developed a method to functionalize electrospun carbon nanofibers to study the electrochemical behavior for biosensors and biofuel cells application.</li><br>
+                    <li>[Thesis]: Improving a prototype of enzymatic fuel cell using laccase-based biocathode on novel/ graphitizing-carbon materials.</li><br>
+                    <li>[Sub-project]: Developing an iodide ion nanosensor for monitoring thyroid deficiency disorder.</li><br>
+                    <li>[Sub-project]: Building a SMART water filteration system using graphitic carbon membranes to filter and sense contaminants in drinking and wastewater.</li>
+                  </ul>
                 </div>
                 <div id="thermo" class="tabcontent">
-                  <h1>Thermoplastic Shrink Laboratory</h1>
-                  <h3>Rotational Graduate Research Student</h3>
+                  <h1>Thermoplastic Shrink Lab</h1>
+                  <h2>Graduate Research Student</h2>
+                  <h3>Sept 2016 - Jan 2017</h3>
                   <br>
-                  <p>Tokyo is the capital of Japan.</p>
-                </div>
-                <div id="hycor" class="tabcontent">
-                  <h1>Hycor Biomedical, Inc.</h1>
-                  <h3>R&D Research Associate (Biochemistry/Instrument Integration)</h3>
-                  <br>
-                  <p>Tokyo is the capital of Japan.</p>
+                  <ul>
+                    <li>Re-evaluated pre-developed immunoassay on nanostructured silica films for point-of-care devices. </li><br>
+                    <li>Optimized a multi-scale assay desing using gold nanoparticles for detecting specific mouse IgG antibodies (proof-of-concept).</li>
+                  </ul>
                 </div>
                 <div id="rdl" class="tabcontent">
-                  <h1>Rheumatology Diagnostics Laboratory (RDL)</h1>
-                  <h3>Research Analyst</h3>
+                  <h1>Rheumatology Diagnostics (RDL)</h1>
+                  <h2>Research Analyst</h2>
+                  <h3>Jul 2015 - Apr 2016</h3>
                   <br>
-                  <p>Tokyo is the capital of Japan.</p>
+                  <ul>
+                    <li>Conducted routine test performance and troubleshooting in-vitro diagnostic medical instruments (e.g. Dynex DSX and Quanta-lyzer).</li><br>
+                    <li>Performed routine data crunching and analysis to address autoimmune-specific disease trends and panels using Excel Analytics.</li>
+                  </ul>
+                </div>
+                <div id="hycor" class="tabcontent">
+                  <h1>Hycor Biomedical</h1>
+                  <h2>R&D Research Associate</h2>
+                  <h3>Jul 2014 - Jul 2015</h3>
+                  <br>
+                  <ul>
+                    <li>Conducted routine test performance and troubleshooting in-vitro diagnostic medical instruments (e.g. Dynex DSX and Quanta-lyzer).</li><br>
+                    <li>Performed routine data crunching and analysis to address autoimmune-specific disease trends and panels using Excel Analytics.</li>
+                  </ul>
                 </div>
                 <div id="VA Hospital" class="tabcontent">
                   <h1>VA San Diego Healthcare System</h1>
-                  <h3>Undergraduate Research Assistant</h3>
+                  <h2>Undergraduate Research Assistant</h2>
+                  <h3>Apr 2013 - Apr 2014</h3>
                   <br>
-                  <p>Tokyo is the cwefwefwfwefweapital of Japan.</p>
+                  <ul>
+                    <li>Research focused on membrane caveolae-signal transmission to intercellular organelles for cardiact regulation. </li><br>
+                    <li>Performed routine protein specification/quantification via Western Blot and other protein assays (e.g. Bradford, BCA etc). </li><br>
+                    <li>Cultured and maintained cardiac cell line (HL-1) regularly for cell analysis and in-vivo testing.</li>
+                  </ul>
                 </div>
               </div>
             </div>
