fixed the orientation on exp

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section class="block title-heading">
       <h1>Elsie Cho</h1>
       <div class=" dimension">
-        <span class="text font">"Live above your expectation, beyond your imagination."</span>
+        <span class="text font"> Why don't we live above our expectation and beyond our imagination?</span>
       </div>
       <div id="wrapper">
         <div class="viewport">
@@ -93,7 +93,7 @@
           </div>
         </div>
       </div>
-      <span class="text font move-me">"Spin Me Around"</span>
+      <span class="text font move-me">The Cube: "Spin me around for fun!"</span>
     </section>
 
     <!--sidebar left link social container-->
@@ -148,14 +148,14 @@
           <div class="about-details" data-aos="fade-down" data-aos-delay="600">
             <br />
             <p class="paragraph-section about">
-              I'm a <a class=emphasis_intro>full-stack web developer</a>. I like creating products that are truly unique and reflect their value and aesthetics.
+              I'm a <a class=emphasis_intro>full-stack web developer</a>. I like creating products that are truly unique and reflect their value and aesthetics. I develop websites/applications that provide both intuitive UI and efficient and adaptable backends.
               <br />
               <br />
               I have a bachelor's degree in <a class="emphasis_intro">Biochemistry and Cell Biology</a> at University of California, San Diego. I finished my master's in <a class=emphasis_intro>Biomedical Engineering</a> at University of California, Irvine and specialized in <a class=emphasis_intro>Carbon MEMS/NEMS and nanofibers for biosensors and electrochemical devices</a>.
               <br />
               <br />
-              Shortly after I finished my graduate program, I dabbled in programming
-              as a hobby to build a fun game. Then, the hobby led me into the field of <a class=emphasis_intro>web development</a> where I found myself enjoying building interactive and intuitive websites and applications.
+              Shortly after finishing my graduate program, I dabbled in programming
+              as a hobby to build a fun game. Then, the hobby led me into the field of <a class=emphasis_intro>web development</a> where I found myself enjoying building fun tools for the web.
             </p>
           </div>
         </div>
@@ -170,7 +170,7 @@
             <div class="container" data-aos="fade-down" data-aos-delay="300">
               <div class="tab">
                 <button class="tablinks" onclick="openCity(event, 'cj')" id="defaultOpen">
-                  [Current Job]
+                  Full-Stack Web Developer
                 </button>
                 <button class="tablinks" onclick="openCity(event, 'biomems')">
                   BioMEMS/Carbon-MEMS
@@ -179,7 +179,7 @@
                   Thermoplastic Shrink Lab
                 </button>
                 <button class="tablinks" onclick="openCity(event, 'rdl')">
-                  RDL Reference Lab
+                  Rheumatology Diagnostics
                 </button>
                 <button class="tablinks" onclick="openCity(event, 'hycor')">
                   Hycor Biomedical
@@ -190,12 +190,18 @@
               </div>
               <div>
                 <div id="cj" class="tabcontent">
-                  <h1>Curren Job</h1>
-                  <h3>Full-Stack Web Developer</h3>
+                  <h1>Personal Projects</h1>
+                  <h2>Full-Stack Web Developer</h2>
+                  <h3>Oct 2018 - Present</h3>
                   <br>
-                  <p> Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industryorem Ipsum is simply dummy text of the
-                    printing and typesetting industryLondon is the capital city of England.</p>
+                  <ul>
+                    <li>Built a simple multi-platform task management tool, <a class="emphasis_intro in-para-link" href="https://www.google.com">Task-It</a>, for users to organize, prioritize, and schedule by related tasks, dates, and/or projects.</li><br>
+                    <li>Built a simple website, <a class="emphasis_intro in-para-link" href="#">ELSIEMADE</a>, to display some of my photo-editing skills on my favorite travel moments.</li>
+                    <br>
+                    <li>Developing a data repository web app, <a class="emphasis_intro in-para-link" href="#">RadQA MRI Data Repository</a>, for storing MRI database and troubleshooting the performance of local MRI scanners.</li><br>
+                    <li><a class="emphasis_intro in-para-link" href="#">MEDICALY</a></li>
+                    
+                  </ul>
                 </div>
                 <div id="biomems" class="tabcontent">
                   <h1>UC Irvine BioMEMS/Carbon-MEMS Lab</h1>
@@ -204,9 +210,9 @@
                   <br>
                   <ul>
                     <li>Developed a method to functionalize electrospun carbon nanofibers to study the electrochemical behavior for biosensors and biofuel cells application.</li><br>
-                    <li>[Thesis]: Improving a prototype of enzymatic fuel cell using laccase-based biocathode on novel/ graphitizing-carbon materials.</li><br>
-                    <li>[Sub-project]: Developing an iodide ion nanosensor for monitoring thyroid deficiency disorder.</li><br>
-                    <li>[Sub-project]: Building a SMART water filteration system using graphitic carbon membranes to filter and sense contaminants in drinking and wastewater.</li>
+                    <li><a class="emphasis_intro">[Thesis]</a>: Improving a prototype of enzymatic fuel cell using laccase-based biocathode on novel/ graphitizing-carbon materials.</li><br>
+                    <li><a class="emphasis_intro">[Project]</a>: Developing an iodide ion nanosensor for monitoring thyroid deficiency disorder.</li><br>
+                    <li><a class="emphasis_intro">[Project]</a>: Building a SMART water filteration system using graphitic carbon membranes to filter and sense contaminants in drinking and wastewater.</li>
                   </ul>
                 </div>
                 <div id="thermo" class="tabcontent">
@@ -216,7 +222,7 @@
                   <br>
                   <ul>
                     <li>Re-evaluated pre-developed immunoassay on nanostructured silica films for point-of-care devices. </li><br>
-                    <li>Optimized a multi-scale assay desing using gold nanoparticles for detecting specific mouse IgG antibodies (proof-of-concept).</li>
+                    <li><a class="emphasis_intro">[Project]</a>: Optimized a multi-scale assay desing using gold nanoparticles for detecting specific mouse IgG antibodies (proof-of-concept).</li>
                   </ul>
                 </div>
                 <div id="rdl" class="tabcontent">
@@ -235,8 +241,10 @@
                   <h3>Jul 2014 - Jul 2015</h3>
                   <br>
                   <ul>
-                    <li>Conducted routine test performance and troubleshooting in-vitro diagnostic medical instruments (e.g. Dynex DSX and Quanta-lyzer).</li><br>
-                    <li>Performed routine data crunching and analysis to address autoimmune-specific disease trends and panels using Excel Analytics.</li>
+                    <li>Practiced daily scrum, agile project management, good data and documentation practices for FDA 510(k) submission.</li><br>
+                    <li>Developed a high-throughput in-vitro diagnostic medical instruments for allergy and autoimmune IgE-based testing in a reuglated lab enviroment per cGMP, ISO 9001, ISO 13485, and CFR 920.</li><br>
+                    <li>Troubleshot on improving both instrumental and manual immunosensors and reported in weekly team and interdepartmental meetings.</li><br>
+                    <li>Optimized IVD stability testing design, sIgE/tIgE immunoassays, and DoE for allergenic proteins and components.</li>
                   </ul>
                 </div>
                 <div id="VA Hospital" class="tabcontent">
