added the description

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <!--right section: email-->
     <div>
       <div class="main-right">
-        <div class="email"><a href="mailto:elsie.c.madden@gmail.com?subject=subject text">elsie.c.madden@gmai.com</a></div>
+        <div class="email"><a href="mailto:elsie.c.madden@gmail.com?subject=subject text">eunbyuc@gmail.com</a></div>
         <div class="vl-right"></div>
       </div>
     </div>
@@ -199,8 +199,7 @@
                     <li>Built a simple website, <a class="emphasis_intro in-para-link" href="#">ELSIEMADE</a>, to display some of my photo-editing skills on my favorite travel moments.</li>
                     <br>
                     <li>Developing a data repository web app, <a class="emphasis_intro in-para-link" href="#">RadQA MRI Data Repository</a>, for storing MRI database and troubleshooting the performance of local MRI scanners.</li><br>
-                    <li><a class="emphasis_intro in-para-link" href="#">MEDICALY</a></li>
-                    
+                    <!-- <li><a class="emphasis_intro in-para-link" href="#">MEDICALY</a></li> -->
                   </ul>
                 </div>
                 <div id="biomems" class="tabcontent">
@@ -242,8 +241,8 @@
                   <br>
                   <ul>
                     <li>Practiced daily scrum, agile project management, good data and documentation practices for FDA 510(k) submission.</li><br>
-                    <li>Developed a high-throughput in-vitro diagnostic medical instruments for allergy and autoimmune IgE-based testing in a reuglated lab enviroment per cGMP, ISO 9001, ISO 13485, and CFR 920.</li><br>
-                    <li>Troubleshot on improving both instrumental and manual immunosensors and reported in weekly team and interdepartmental meetings.</li><br>
+                    <li>Developed a high-throughput in-vitro diagnostic medical instruments for allergy IgE-based testing in a reuglated lab enviroment per cGMP, ISO 9001, ISO 13485, and CFR 920.</li><br>
+                    <li>Troubleshot both instrumental and manual immunosensors and reported in weekly team and interdepartmental meetings.</li><br>
                     <li>Optimized IVD stability testing design, sIgE/tIgE immunoassays, and DoE for allergenic proteins and components.</li>
                   </ul>
                 </div>
